Fix name validation and release Dockerfile config

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,6 +29,7 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         context: .
+        file: ./Dockerfile
         push: true
         platforms: linux/amd64,linux/arm64,darwin/arm64,darwin/amd64
         tags: |
